fixing dark mode bugs

--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -44,7 +44,7 @@
 .logo-title-login{
   color:var(--red);
   font-size: 35px;
-  margin: 0;
+  margin: 1em;
 }
 .error{
   margin: 1.5em;
@@ -81,4 +81,30 @@
   color: white;
   margin: 0;
 
+}
+
+.login-container{
+  display: flex;
+  gap: 0.5em;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%, -50%);
+  height: 100%;
+  width: 50%;
+}
+.formControl{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+
+}
+
+.formControl p {
+  margin: 0;
 }
